# reviews-test

./: README.md  pyproject.toml
lint/: .black  .flake8  .isort.cfg
src/: config.py  database.py  main.py
src/reviews/: models.py  router.py  schemas.py  static.py
src/reviews/services/: crud.py  definition_sentiment.py
tests/services/: fixture.py  test_definition_sentiment.py
