[project]
name = "reviews"
version = "0.1.0"
description = ""
authors = [
    {name = "Timofey Zavrazhnov",email = "tima.zavrazhnov@mail.ru"}
]
readme = "README.md"
requires-python = "3.12.2"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "greenlet (>=3.2.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "reviews", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
